@@ -6,6 +6,7 @@ Revision history for Perl extension AnyEvent.
           and not use Time::HiRes, work around this bug.
         - fix a bug in the pure perl event loop that caused timers to
           be delayed under some circumstances.
+        - implement optional argument checking via PERL_ANYEVENT_STRICT.
         - minor optimisations applied to most backends.
 
 4.161 Fri Jul  4 14:24:48 CEST 2008
